==> hso-esk/emb6/target/mcu/atmega1281/atmega1281.c <==
#include "emb6.h"
#include "board_conf.h"
#include "avr/wdt.h"
#include "math.h"
#include "target.h"
#include "hwinit.h"
#include "bsp.h"
#define SPI_TRAN_OPEN()            hal_enterCritical(); \
        PORT( SSPORT ) &= ~( 1 << SSPIN );
#define SPI_TRAN_CLOSE()        PORT( SSPORT ) |= ( 1 << SSPIN ); \
        hal_exitCritical();
#define SPI_TRAN_WAIT()            while ((SPSR & (1 << SPIF)) == 0) {;}
#define SPI_TRAN_READ()            (SPDR)
#define SPI_TRAN_WRITE(c_value)    SPDR = (c_value);

int8_t hal_init( void )
{
    hal_enterCritical();
    /* Init USART*/
    _hal_usartInit();
    /* Init timer*/
    _hal_tim0Init();
    /* Init leds */
#if    LEDS_ON_BOARD == TRUE
    _hal_ledsInit();
#endif /* LEDS_ON_BOARD == TRUE */
    //    _hal_tim1Init();
    //    LOG_INFO("%s\n\r","Checking MCUSR...");
    //    if(MCUSR & (1<<PORF )) LOG_INFO("%s\n\r","Power-on reset.");
    //    if(MCUSR & (1<<EXTRF)) LOG_INFO("%s\n\r","External reset!");
    //    if(MCUSR & (1<<BORF )) LOG_INFO("%s\n\r","Brownout reset!");
    //    if(MCUSR & (1<<WDRF )) LOG_INFO("%s\n\r","Watchdog reset!");
    //    if(MCUSR & (1<<JTRF )) LOG_INFO("%s\n\r","JTAG reset!\n");
    MCUSR = 0;
    hal_exitCritical();
    return 1;
}

uint8_t hal_extIntInit( en_targetExtInt_t e_intSource,
        pfn_intCallb_t pfn_intCallback )
{
    int8_t c_ret = 0;
    hal_enterCritical();

    if( pfn_intCallback == NULL )
    {
        //        LOG_ERR("You are tying to initialise NULL pointer function.");
        return 0;
    }

    switch( e_intSource )
    {
        case E_TARGET_RADIO_INT:
            EIMSK |= ( 1 << INT5 );
            EICRB |= ( ( 1 << ISC51 ) | ( 1 << ISC50 ) );
            PORTE &= ~( 1 << PE5 );
            DDRE &= ~( 1 << DDE5 );
            isr_radioCallb = pfn_intCallback;
            c_ret = 1;
            break;
        case E_TARGET_USART_INT:
            isr_rxCallb = pfn_intCallback;
            break;
        default:
            c_ret = 0;
            break;
    }
    hal_exitCritical();
    return c_ret;

}

void * hal_ctrlPinInit( en_targetExtPin_t e_pinType )
{
    pinDesc_t * p_pin = (pinDesc_t *)malloc( sizeof(pinDesc_t) );

    if( p_pin != NULL )
    {
        switch( e_pinType )
        {
            case E_TARGET_RADIO_RST:
                p_pin->pc_ddr = RESET_DDR;
                p_pin->pc_port = RESET_PORT;
                p_pin->c_pin = RESET_PIN;

                ( *( p_pin->pc_port ) ) &= ~( 1 << p_pin->c_pin );
                ( *( p_pin->pc_ddr ) ) |= ( 1 << p_pin->c_pin );

                break;
            case E_TARGET_RADIO_SLPTR:
                p_pin->pc_ddr = SLP_TR_DDR;
                p_pin->pc_port = SLP_TR_PORT;
                p_pin->c_pin = SLP_TR_PIN;

                ( *( p_pin->pc_port ) ) &= ~( 1 << p_pin->c_pin );
                ( *( p_pin->pc_ddr ) ) |= ( 1 << p_pin->c_pin );

                break;
            default:
                break;
        }
    }
    return (void *)p_pin;
}

void * hal_pinInit( en_targetExtPin_t e_pinType )
{
    pinDesc_t * p_pin = (pinDesc_t *)malloc( sizeof(pinDesc_t) );

    if( p_pin != NULL )
    {
        switch( e_pinType )
        {
            case E_TARGET_RADIO_RST:
                p_pin->pc_ddr = RESET_DDR;
                p_pin->pc_port = RESET_PORT;
                p_pin->c_pin = RESET_PIN;

                ( *( p_pin->pc_port ) ) &= ~( 1 << p_pin->c_pin );
                ( *( p_pin->pc_ddr ) ) |= ( 1 << p_pin->c_pin );

                break;
            case E_TARGET_RADIO_SLPTR:
                p_pin->pc_ddr = SLP_TR_DDR;
                p_pin->pc_port = SLP_TR_PORT;
                p_pin->c_pin = SLP_TR_PIN;

                ( *( p_pin->pc_port ) ) &= ~( 1 << p_pin->c_pin );
                ( *( p_pin->pc_ddr ) ) |= ( 1 << p_pin->c_pin );

                break;
            default:
                break;
        }
    }
    return (void *)p_pin;
}

void hal_pinSet( void * p_pin )
{
    pinDesc_t * st_pin = (pinDesc_t *)p_pin;
    if( p_pin == NULL )
        return;
    hal_enterCritical();
    ( *( st_pin->pc_port ) ) |= ( 1 << st_pin->c_pin );
    hal_exitCritical();
}

void hal_pinClr( void * p_pin )
{
    pinDesc_t * st_pin = (pinDesc_t *)p_pin;
    if( p_pin == NULL )
        return;
    hal_enterCritical();
    ( *( st_pin->pc_port ) ) &= ~( 1 << st_pin->c_pin );
    hal_exitCritical();
}

uint8_t hal_pinGet( void * p_pin )
{
    pinDesc_t * st_pin = (pinDesc_t *)p_pin;
    if( p_pin == NULL )
        return 0xFF;
    // (PORTX & (1 << PINX)) >> PINX
    return ( ( *( st_pin->pc_port ) ) & ( 1 << st_pin->c_pin ) );
}

void * hal_spiInit( void )
{
    // Atmega1281 has only one spi interface.
    spiDesc_t * p_spi = (spiDesc_t *)malloc( sizeof(spiDesc_t) );

    if( p_spi != NULL )
    {
        memset( p_spi, 1, sizeof(spiDesc_t) );
        hal_enterCritical();
        /*SPI Specific Initialization.*/
        /* Set SS, CLK and MOSI as output. */
        /* To avoid a SPI glitch, the port register shall be set before the DDR register */
        PORT( SPIPORT ) |= ( 1 << SSPIN ) | ( 1 << SCKPIN ); /* Set SS and CLK high */
        DDR( SPIPORT ) |= ( 1 << SSPIN ) | ( 1 << SCKPIN )
                | ( 1 << MOSIPIN );
        DDR( SPIPORT ) &= ~( 1 << MISOPIN ); /* MISO input */

        /* Run SPI at max speed */
        SPCR = ( 1 << SPE ) | ( 1 << MSTR ); /* Enable SPI module and master operation. */
        SPSR = ( 1 << SPI2X ); /* Enable doubled SPI speed in master mode. */
        hal_exitCritical();
        *p_spi = 1;
    }
    return p_spi;
}

uint8_t hal_spiSlaveSel( void * p_spi, bool action )
{
    if( p_spi == 0 )
    {
        //        LOG_ERR("%s\n\r","SPI was not initialized!");
        return 0;
    }
    if( action )
    {
        //! [select_slave]
        SPI_TRAN_OPEN()
        ;
        //! [select_slave]
    }
    else
    {
        //! [deselect_slave]
        SPI_TRAN_CLOSE()
        ;
        //! [deselect_slave]
    }
    return 1;
}

uint8_t hal_spiRead( uint8_t * p_reg, uint16_t i_length )
{
    while( i_length-- )
    {
        SPI_TRAN_WRITE( 0 );
        SPI_TRAN_WAIT();
        *p_reg++ = SPI_TRAN_READ();
    }
    return *p_reg;
}

void hal_spiWrite( uint8_t * c_value, uint16_t i_length )
{
    while( i_length-- )
    {
        /*Send Register address and write register content.*/
        SPI_TRAN_WRITE( *c_value++ );
        SPI_TRAN_WAIT();
    }
}
